Fixed overflow property on tour modal

--- a/app/stylesheets/layout/_tour.sass
+++ b/app/stylesheets/layout/_tour.sass
@@ -18,6 +18,7 @@
   position: absolute
   z-index: 2000
   //min-height: 530px !important
+  overflow: visible !important
   height: auto !important
 
 .welcome
